1.76.12 (2018-xx-xx):

Features/Enhancements:
----------------------
#1180: Allow saving certain connection properties locally when using database

Fixes:
------
#1181: Connections sometimes dont immediately load when switching to sql feature
#1173: Fixed memory leak when loading connections multiple times
#1134: Fixed issue where opening a connection opens same connection on other clients when using database feature
#449: Encrypt passwords saved to database


1.76.11 (2018-10-18):

Fixes:
------
#1139: Feature "Reconnect to previously opened sessions" not working
#1136: Putty window not maximized


1.76.10 (2018-10-07):

Fixes:
------
#1124: Enabling themes causes an exception


1.76.9 (2018-10-07):

Fixes:
------
#1117: Duplicate panel created when "Reconnect on Startup" and "Create Empty Panel" settings enabled
#1115: Exception when changing from xml data storage to SQL
#1110: Pressing Delete button during connection rename attempts to delete the connection instead of the text
#1106: Inheritance does not work when parent has C# default type set
#1092: Invalid Cast Exceptions loading default connectioninfo 
#1091: Minor themeing issues
#853: Added some additional safety checks and logging to help address RDP crashes


1.76.8 (2018-08-25):

Fixes:
------
#1088: Delete and Launch buttons are not disabled when last external tool deleted
#1087: 'Save connections after every edit' setting not honored
#1082: Connections not given GUID if Id is empty in connection xml


1.76.7 (2018-08-22):

Fixes:
------
#1076: Wrong object selected when duplicating connection then switching between properties and inheritance in config window
#1068: Fixed some toolbar positioning bugs


1.76.6 (2018-08-03):

Fixes:
------
#1062: Entering correct password when starting app does not load connections file

1.76.5 (2018-08-02):

Fixes:
------
#1057: Hitting F2 with no connection node selected caused unhandled exception
#1052: 'Switch to notification panel' feature does not always switch