@@ -429,7 +429,8 @@ namespace mRemoteNG.UI.Forms
 				        // Only handle this msg if it was triggered by a click
 				        if (NativeMethods.LOWORD(m.WParam) == NativeMethods.WA_CLICKACTIVE)
 				        {
-				            var controlThatWasClicked = FromChildHandle(NativeMethods.WindowFromPoint(MousePosition));
+				            var controlThatWasClicked = FromChildHandle(NativeMethods.WindowFromPoint(MousePosition))
+				                ?? GetChildAtPoint(MousePosition);
 				            if (controlThatWasClicked != null)
 				            {
 				                if (controlThatWasClicked is TreeView ||
@@ -444,9 +445,14 @@ namespace mRemoteNG.UI.Forms
 				                         controlThatWasClicked is Crownwood.Magic.Controls.TabControl ||
 				                         controlThatWasClicked is Crownwood.Magic.Controls.InertButton)
 				                {
-				                    // Simulate a mouse event since one wasn't generated by Windows
-				                    SimulateClick(controlThatWasClicked);
-				                    controlThatWasClicked.Focus();
+                                    // Simulate a mouse event since one wasn't generated by Windows
+                                    SimulateClick(controlThatWasClicked);
+                                    controlThatWasClicked.Focus();
+                                }
+                                else if (controlThatWasClicked is AutoHideStripBase)
+				                {
+                                    // only focus the autohide toolstrip
+                                    controlThatWasClicked.Focus();
 				                }
 				                else
 				                {
