@@ -8,6 +8,7 @@ Fixes:
 ------
 #1181: Connections sometimes dont immediately load when switching to sql feature
 #1173: Fixed memory leak when loading connections multiple times
+#1168: Autohide Connection and Config tab won't open when ssh connection active
 #1134: Fixed issue where opening a connection opens same connection on other clients when using database feature
 #449: Encrypt passwords saved to database
 
